Move the quit confirmation dialog earlier.

This avoids it getting triggered by URL requests to quit/restart.

BUG=909592, 142944

Change-Id: I353c1334decd556554399349bb207e63fca1352b
Reviewed-on: https://chromium-review.googlesource.com/c/1354399
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#612323}
Former-commit-id: f19bb479a965dc882d5fd4debf24aaad76878930