chrome/browser/browser_process_platform_part_base.cc
@@ -23,7 +23,7 @@ void BrowserProcessPlatformPartBase::PlatformSpecificCommandLineProcessing(
 void BrowserProcessPlatformPartBase::StartTearDown() {
 }
 
-void BrowserProcessPlatformPartBase::AttemptExit() {
+void BrowserProcessPlatformPartBase::AttemptExit(bool try_to_quit_application) {
 // chrome::CloseAllBrowsers() doesn't link on OS_ANDROID, but it overrides this
 // method already.
 #if defined(OS_ANDROID)
